--- a/es5/01.Overview.md
+++ b/es5/01.Overview.md
@@ -1,6 +1,5 @@
 # 자바스크립트 기본 개요
 
-
 * [소개](##소개)
 * [활용 범위](##활용-범위)
 * [핵심 개념](##핵심-개념)
@@ -9,7 +8,7 @@
 
 ## 소개
 
-자바스크립트는 **웹 브라우저에서 동작**하는 [스크립트 언어](https://ko.wikipedia.org/wiki/%EC%8A%A4%ED%81%AC%EB%A6%BD%ED%8A%B8_%EC%96%B8%EC%96%B4)이다. 초기에는 서버로 부터 받은 HTML과 CSS, 데이터로 렌더링을 해주는 수준이었지만, node.js(Server Side javascript)를 비롯한 많은 프레임워크, 라이브러리들이 등장하면서 자바스크립트를 널리 사용하게 되었다.
+- 자바스크립트는 **웹 브라우저에서 동작**하는 [스크립트 언어](https://ko.wikipedia.org/wiki/%EC%8A%A4%ED%81%AC%EB%A6%BD%ED%8A%B8_%EC%96%B8%EC%96%B4)이다. 초기에는 서버로 부터 받은 HTML과 CSS, 데이터로 렌더링을 해주는 수준이었지만, node.js(Server Side javascript)를 비롯한 많은 프레임워크, 라이브러리들이 등장하면서 자바스크립트를 널리 사용하게 되었다.
 
 ## 활용 범위
 
@@ -43,9 +42,20 @@
 
 ## 자바스크립트와 객체지향 프로그래밍
 
-**자바스크립트는 클래스를 지원하지 않지만 객체지향 프로그래밍이 가능하다.** 프로토타입 체인과 클로저로 객체 지향 프로그래밍에서 제시하는 상속, 캡슐화, 정보 은닉 등의 개념을 소화할 수 있다.  
+- **자바스크립트는 클래스를 지원하지 않지만 객체지향 프로그래밍이 가능하다.** 프로토타입 체인과 클로저로 객체 지향 프로그래밍에서 제시하는 상속, 캡슐화, 정보 은닉 등의 개념을 소화할 수 있다.  
 실제로 GOF(Gang Of Four)의 디자인 패턴을 자바스크립트로 구현한 코드들이 많이 공개되고 있다…  
 
+## 자바스크립트와 함수형 프로그래밍
+
+- 자바스크립트는 **함수형 프로그래밍**이 가능하다. (함수형 프로그래밍은 높은 수준의 모듈화를 가능케 하는 매우 효율적인 프로그래밍 방법이다.)  
+  자바스크립트는 주요 특성인 **일급 객체(함수도 일종의 객체)** 로서의 함수 특성과 클로저를 활용하여 이를 가능케 한다.(가독성을 떨어뜨린다는 단점도 있다.)  
+---> 함수형 프로그래밍 기법으로 구현된 코드는 제 3자가 해석하기가 상당히 난해하다...
+
+
+## 자바스크립트의 단점
+
+1. 느슨한 타입 체크 때문에 디버깅에 어려움을 겪기도 한다.
+2. 전역 객체의 존재로 인해 이름 충돌의 위험성이 있어 항상 개발자는 이 부분에 대해 신경 써야 한다.
 
 
 
@@ -54,5 +64,6 @@
 
 
 
-**앞으로 정리하면서 해당 내용들에 대한 링크를 걸어 둘 생각이다.**
+
+**<sub>앞으로 정리하면서 해당 내용들에 대한 링크를 걸어 둘 생각이다.</sub>**
 
