--- a/es5/01.Overview.md
+++ b/es5/01.Overview.md
@@ -4,7 +4,8 @@
 * [활용 범위](##활용-범위)
 * [핵심 개념](##핵심-개념)
 * [자바스크립트와 객체지향  프로그래밍](##자바스크립트와-객체지향-프로그래밍)
-
+* [자바스크립트와 함수형 프로그래밍](##자바스크립트와-함수형-프로그래밍)
+* [자바스크립트의 단점](##자바스크립트의-단점)
 
 ## 소개
 
